# hackai-final-230675

./: README.md  agent1qt5j5dgcl4_data.json  agent1qvletnn6d9_data.json  agent1qvmw8mkdg8_data.json  clothingstore.py  elecstore.py  furniturestore.py  products.json  products2.json  pyproject.toml  user.py
alerts/: client.py  essentials.py  fetcher.py  main.py  private_keys.json  utils.py
protocols/: book.py  elecquery.py  furnibook.py  furniquery.py  query.py
protocols/purchase/: private_keys.json
src/: agent1qt5j5dgcl4_data.json  agent1qvletnn6d9_data.json  agent1qvmw8mkdg8_data.json  main.py  private_keys.json
src/agents/: clothingstore.py  context_agent.py  context_user.py  elecstore.py  furniturestore.py  gemini_agent.py  gemini_user.py  imagegen_agent.py  imagegen_user.py  reminder.py  sentiment_agent.py  sentiment_user.py  user.py
src/alerts/: client.py  essentials.py  fetcher.py  main.py  private_keys.json  utils.py
src/messages/: basic.py  basicctx.py
src/protocols/: book.py  elecbook.py
src/protocols/purchase/: purchasequery.py
